Use Handler Service Repository pattern
