# docs/swagger.json
@@ -28,7 +28,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.DataResponse-array_main_Product"
+                            "$ref": "#/definitions/model.DataResponse-array_Product"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -47,25 +53,25 @@
                 "parameters": [
                     {
                         "description": "Product Body",
-                        "name": "object",
+                        "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.ProductCreate"
+                            "$ref": "#/definitions/model.ProductCreate"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.DataResponse-main_Product"
+                            "$ref": "#/definitions/model.DataResponse-Product"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -96,13 +102,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.DataResponse-main_Product"
+                            "$ref": "#/definitions/model.DataResponse-Product"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -128,11 +134,11 @@
                     },
                     {
                         "description": "product body",
-                        "name": "object",
+                        "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.ProductCreate"
+                            "$ref": "#/definitions/model.ProductCreate"
                         }
                     }
                 ],
@@ -140,13 +146,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.DataResponse-main_Product"
+                            "$ref": "#/definitions/model.DataResponse-string"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/main.ErrorResponse"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -175,7 +181,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.DataResponse-string"
+                            "$ref": "#/definitions/model.DataResponse-string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -195,26 +207,26 @@
                 }
             }
         },
-        "main.DataResponse-array_main_Product": {
+        "model.DataResponse-Product": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.Product"
+                }
+            }
+        },
+        "model.DataResponse-array_Product": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.Product"
+                        "$ref": "#/definitions/model.Product"
                     }
                 }
             }
         },
-        "main.DataResponse-main_Product": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/main.Product"
-                }
-            }
-        },
-        "main.DataResponse-string": {
+        "model.DataResponse-string": {
             "type": "object",
             "properties": {
                 "data": {
@@ -222,7 +234,7 @@
                 }
             }
         },
-        "main.ErrorResponse": {
+        "model.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -230,7 +242,7 @@
                 }
             }
         },
-        "main.Product": {
+        "model.Product": {
             "type": "object",
             "required": [
                 "code",
@@ -261,7 +273,7 @@
                 }
             }
         },
-        "main.ProductCreate": {
+        "model.ProductCreate": {
             "type": "object",
             "required": [
                 "code",
