# model/response.go
@@ -1,0 +1,10 @@
+package model
+
+type (
+	DataResponse[T Product | []Product | string] struct {
+		Data T `json:"data"`
+	}
+	ErrorResponse struct {
+		Error string `json:"error"`
+	}
+)
